--- a/src_site/n/posts/2018-03-21-离开微信了.markdown
+++ b/src_site/n/posts/2018-03-21-离开微信了.markdown
@@ -4,13 +4,14 @@ author: 郝运
 tag:
 ---
 
-对不起，我离开微信了。
-谢谢大家的关心。
+对不起，对我突然删除微信账号的行为表示抱歉。谢谢大家的关心。
+
+不过我确实离开微信了。
 
 
 <!--more-->
 
-为什么删除微信的原因其实有很多，改天再说吧。
+为什么删除微信的原因其实有很多，如果有机会再说吧。
 
 
 
