--- a/src_site/n/posts/2017-01-22-难过.markdown
+++ b/src_site/n/posts/2017-01-22-难过.markdown
@@ -3,18 +3,15 @@ title: 难过
 date: January 22, 2017
 ---
 
-> This is a repost of <http://telegra.ph/2017-1-22-01-22>
->
-
-<!--more-->
-
 只看了半场的晚会又回到了办公室。感觉晚会比去年的好看，而我还是在中场休息时回来了。不知道为什么，感觉自己有很多事情要做。
 
-感觉去年这时刚刚过去，不知不觉又一年了。去年时坚持看完了。但是感觉有点儿无聊。只记得当时开场前给孙xw发了条微信，说可以来看，然后在我散场结束后收到了回复。有时想想自己的行为感到很奇怪。演出会场是满满的，但是一出会场，周末的大街上并没有什么人，也并没有什么人跟自己一个方向回家。大家都是和朋友一起来的，一个人真的很奇怪。
+感觉去年这时刚刚过去，不知不觉又一年了。去年时坚持看完了。但是感觉有点儿无聊。只记得当时开场前给sxw发了条微信，说可以来看，然后在我散场结束后收到了回复。有时想想自己的行为感到很奇怪。演出会场是满满的，但是一出会场，周末的大街上并没有什么人，也并没有什么人跟自己一个方向回家。大家都是和朋友一起来的，一个人真的很奇怪。
 
 刚才合唱的小朋友们说“新年快乐”的时候，突然间被感动了。台上节目开始怀旧的时候，我便意识到，自己真的是不再年轻了。而互动的大屏幕上写着“00后表示一个都没有看过”，更加深刻地印证着这一点。
 
 其实还是知道自己为什么觉得有很多事情要做的。来柏林已经近三年半了，依然不会德语，听着台上台下的德语声，感觉自己很差劲，当然最关键的是英文也不好。而数学呢，也没有什么进展。当大家都可以侃侃而谈的时候，我依然一片茫然。对于数学，我似乎有一些自己的想法，但是有时会感觉，自己已经在错误的道路上，用错误的方法，带着错误的理念走了很远了。
+
+<!--more-->
 
 - - - - - - - - - - - - - - - - - - -
 
@@ -31,3 +28,5 @@ date: January 22, 2017
 上周为了清空知乎的主页，也调试了好久的JavaScript。按照《js系列：知乎批量取消关注功能》这篇文章的方法，结合Tampermonkey，实现了文中那个没有实现的Cross-document messaging，把知乎的主页清空了。当然留下了一些“关注了……话题”：难受，悲伤，失落等等。试图在告诉点进我主页的人，我很难过。
 
 都是简单的代码，我却要尝试好久。一直打算学习的Haskell至今还是不懂。
+
+> This is a repost of <http://telegra.ph/2017-1-22-01-22>
