--- a/src_site/n/posts/2017-03-15-BT下载的正确姿势.markdown
+++ b/src_site/n/posts/2017-03-15-BT下载的正确姿势.markdown
@@ -3,9 +3,4 @@ title: BT下载地正确姿势
 date: March 15, 2017
 ---
 
-> This is a repost of <http://telegra.ph/BT下载的正确姿势-03-15>
->
-
-<!--more-->
-
-请跳转上方链接阅读。
+Please visit <http://telegra.ph/BT下载的正确姿势-03-15>
