--- a/src_site/n/posts/2019-06-28-告别.markdown
+++ b/src_site/n/posts/2019-06-28-告别.markdown
@@ -3,9 +3,11 @@ title: 告别
 author: 郝运
 ---
 
-> 下面的这些文字混乱零散地写于不同时间，又在不同的时间不断地修修补补。写的时候，有时是开心的，对未来充满了希望，感觉终于可以要开始新的生活了;不过更多的时候是绝望，故而会很压抑。其实可能是出于绝望，才会选择通过文字来和自己交流。然而写一会儿自己就会变得平静，情绪没有了，便写不下去了。过去的生活经历没有那么丰富，思想也没有那么深刻或者有趣。（２０１９－０７－１５）
+> 下面的这些文字混乱零散地写于不同时间，又在不同的时间不断地修修补补。写的时候，有时是开心的，对未来充满了希望，感觉终于可以要开始新的生活了;不过更多的时候是绝望，故而会很压抑。其实可能是出于绝望，才会选择通过文字来和自己交流。然而写一会儿自己就会变得平静，情绪没有了，便写不下去了。过去的生活经历没有那么丰富，思想也没有那么深刻或者有趣。（2019-07-15）
 > 
-> 我想离开，但又想留下些文字，也许这是一只拖着我没能离开的唯一的挂念。（２０１９－０６－２８）
+> 我想离开，但又想留下些文字，也许这是一只拖着我没能离开的唯一的挂念。（2019-06-28）
+
+<!--more-->
 
 要写这个是很久很久的想法了，但又好像是最近的冲动。这冲动有两个不同的诱因，一个是在某一天仿佛对生活又有了新的希望——放佛是在上周，Ｃ的话似乎让我感受到了一些希望，然后我想好了一个题目，“和过去告别”，以迎接新的生活；而另一个，也是真正使我可以冲动地把这些想法写出来的原因，可能是这两天无尽的绝望——于是我觉得可能“告别”更好一些，因为告别了过去，就意味着要走向未来，但我不知道或者看不到未来，甚至有时不想要未来，脑子里只有过去，但并不是怀念过去。同时，觉得自己的生命会在某一个时刻戛然而至，那个时刻可能可以叫做“现在”，但并不是真的现在——只是很接近，但还没有到，像是一个极限的过程，难以描述。其实我不知道我在告别什么，只是有一种难以摆脱的情绪。而这里写下的，应该只是回忆吧。回忆有真的有假的，那些假的应该不是故意造假，只是记忆混乱了，把想象的也当作真实的了，其实也未尝不可把想象当作真实。 想起《阳光灿烂的日子》里的独白，
 
@@ -15,9 +17,7 @@ author: 郝运
 
 我觉得我愿意把想法写下来似乎是出于某种留恋，像是希望有人看到我的故事，知道我的想法，但又能是谁呢？
 
-<!--more-->
 
-<!--
 
 ## 柏林
 
@@ -25,6 +25,9 @@ author: 郝运
 
 ２０１３年２月的时候第一次到柏林参加ＢＭＳ的面试，自己一个人出国，不懂德语，也很胆怯张口说英语，但还是摸索着在大雪中降落到了这个城市。除了机场之外，第一个达到的地方是便是 Ｂｒｅｉｔｓｃｈｅｉｄｐｌａｔｚ，在这里终于连上了ＷＩＦＩ，使我知道了我在哪里．在之后的六年时间里，我无数次路过这里，来到这里吃炸鸡，逛各种的节日市场，逛周边的商店，或者仅仅是坐在这里，拿着啤酒或者能量饮料，和朋友闲聊。出于惯性，总在不知不觉间就到了这儿。破损的教堂似乎从来就没有维修好过，但是周边的建筑却不知不觉的发生了很多变化。
 
+(待续)
+
+<!--
 刚来到柏林的时候把手机丢了，过了一年的没有智能机的日子，那个时间人人网已经衰落到
 
 
