--- a/src_site/n/posts/2019-06-28-告别.markdown
+++ b/src_site/n/posts/2019-06-28-告别.markdown
@@ -9,21 +9,48 @@ author: 郝运
 
 <!--more-->
 
-要写这个是很久很久的想法了，但又好像是最近的冲动。这冲动有两个不同的诱因，一个是在某一天仿佛对生活又有了新的希望——放佛是在上周，Ｃ的话似乎让我感受到了一些希望，然后我想好了一个题目，“和过去告别”，以迎接新的生活；而另一个，也是真正使我可以冲动地把这些想法写出来的原因，可能是这两天无尽的绝望——于是我觉得可能“告别”更好一些，因为告别了过去，就意味着要走向未来，但我不知道或者看不到未来，甚至有时不想要未来，脑子里只有过去，但并不是怀念过去。同时，觉得自己的生命会在某一个时刻戛然而至，那个时刻可能可以叫做“现在”，但并不是真的现在——只是很接近，但还没有到，像是一个极限的过程，难以描述。其实我不知道我在告别什么，只是有一种难以摆脱的情绪。而这里写下的，应该只是回忆吧。回忆有真的有假的，那些假的应该不是故意造假，只是记忆混乱了，把想象的也当作真实的了，其实也未尝不可把想象当作真实。 想起《阳光灿烂的日子》里的独白，
+要写这个是很久很久的想法了，但又好像是最近的冲动。这冲动有两个不同的诱因，一个是
+在某一天仿佛对生活又有了新的希望——放佛是在上周，Ｃ的话似乎让我感受到了一些希望，
+然后我想好了一个题目，“和过去告别”，以迎接新的生活；而另一个，也是真正使我可以冲
+动地把这些想法写出来的原因，可能是这两天无尽的绝望——于是我觉得可能“告别”更好一
+些，因为告别了过去，就意味着要走向未来，但我不知道或者看不到未来，甚至有时不想要
+未来，脑子里只有过去，但并不是怀念过去。同时，觉得自己的生命会在某一个时刻戛然而
+止，那个时刻可能可以叫做“现在”，但并不是真的现在——只是很接近，但还没有到，像是
+一个极限的过程，难以描述。其实我不知道我在告别什么，只是有一种难以摆脱的情绪。而
+这里写下的，应该只是回忆吧。回忆有真的有假的，那些假的应该不是故意造假，只是记忆
+混乱了，把想象的也当作真实的了，其实也未尝不可把想象当作真实。
+想起《阳光灿烂的日子》里的一段旁白，
 
-> 哈哈哈，千万别相信这个，我从来就没有这样勇敢过，这样壮烈过。我不断发誓要老老实实讲故事，可是说真话的愿望有多么强烈，受到的各种干扰就有多么大。我悲哀地发现，我根本无法还原真实。记忆总是被我的情感改头换面，并随之捉弄我，背叛，把我搞得头脑混乱，真伪难辨。
+> 哈哈哈，千万别相信这个，我从来就没有这样勇敢过，这样壮烈过。我不断发誓要老老实
+> 实讲故事，可是说真话的愿望有多么强烈，受到的各种干扰就有多么大。我悲哀地发现，
+> 我根本无法还原真实。记忆总是被我的情感改头换面，并随之捉弄我，背叛，把我搞得头
+> 脑混乱，真伪难辨。
 
-从答辩完到现在，整个人无论如何也高兴不起来。而且我变得害怕朋友们还有父母对我的关心。我想逃避，我想结束。走在路上，似乎是一种恍惚的状态，感觉世界在随着我脚步震动，意识和身体的关系变得松散。有时也会感觉到好像还有种力量把我从桥的护栏边拉回到路中间，感觉是和另一种力量在抗衡。
+从答辩完到现在，整个人无论如何也高兴不起来。而且我变得害怕朋友们还有父母对我的关
+心。我想逃避，我想结束。走在路上，似乎是一种恍惚的状态，感觉世界在随着我脚步震动，
+意识和身体的关系变得松散。有时也会感觉到好像还有种力量把我从桥的护栏边拉回到路中
+间，感觉是和另一种力量在抗衡。
 
-我觉得我愿意把想法写下来似乎是出于某种留恋，像是希望有人看到我的故事，知道我的想法，但又能是谁呢？
+我觉得我愿意把想法写下来似乎是出于某种留恋，像是希望有人看到我的故事，知道我的想
+法，但又能是谁呢？
 
 
 
 ## 柏林
 
-已经在柏林生活近六年了，也就是到现在为止一生中超过五分之一的时间了。生活久了，就爱上了这座城市。但是有时也会不解，到底是喜欢这个城市本身，还是仅仅因为呆的久了，习惯了这里的生活。或许这像是生活在一起的两个人的感情，是喜欢本身让人喜欢，还是仅仅是相处的习惯了。不过两者也并不算太矛盾吧，所谓日久生情，但我又觉得有所微妙的差异。
+已经在柏林生活近六年了，也就是到现在为止一生中超过五分之一的时间了。生活久了，就
+爱上了这座城市。但是有时也会不解，到底是喜欢这个城市本身，还是仅仅因为呆的久了，
+习惯了这里的生活。或许这像是生活在一起的两个人的感情，是喜欢本身让人喜欢，还是仅
+仅是相处的习惯了。不过两者也并不算太矛盾吧，所谓日久生情，但我又觉得有所微妙的差
+异。
 
-２０１３年２月的时候第一次到柏林参加ＢＭＳ的面试，自己一个人出国，不懂德语，也很胆怯张口说英语，但还是摸索着在大雪中降落到了这个城市。除了机场之外，第一个达到的地方是便是 Ｂｒｅｉｔｓｃｈｅｉｄｐｌａｔｚ，在这里终于连上了ＷＩＦＩ，使我知道了我在哪里．在之后的六年时间里，我无数次路过这里，来到这里吃炸鸡，逛各种的节日市场，逛周边的商店，或者仅仅是坐在这里，拿着啤酒或者能量饮料，和朋友闲聊。出于惯性，总在不知不觉间就到了这儿。破损的教堂似乎从来就没有维修好过，但是周边的建筑却不知不觉的发生了很多变化。
+2013年2月的时候第一次到柏林参加ＢＭＳ的面试，自己一个人出国，不懂德语，也很胆怯
+张口说英语，但还是摸索着在大雪中降落到了这个城市。除了机场之外，第一个达到的地方
+是便是 Ｂｒｅｉｔｓｃｈｅｉｄｐｌａｔｚ，在这里终于连上了ＷＩＦＩ，使我知道了我
+在哪里．在之后的六年时间里，我无数次路过这里，来到这里吃炸鸡，逛各种的节日市场，
+逛周边的商店，或者仅仅是坐在这里，拿着啤酒或者能量饮料，和朋友闲聊。出于惯性，总
+在不知不觉间就到了这儿。破损的教堂似乎从来就没有维修好过，但是周边的建筑却不知不
+觉的发生了很多变化。
 
 (待续)
 
