--- a/src_site/n/posts/2019-10-06-十月.markdown
+++ b/src_site/n/posts/2019-10-06-十月.markdown
@@ -120,3 +120,7 @@ ALLES，女朋友在你生活中应该是最重要的，你要找一个女朋友
 然而总是被很多闲事所阻拦。但是一时的心境过去，便什么也再也想不起来。以致这篇，也
 就这样草草地收尾吧。
 
+- - - - -
+
+> This is a repost of <https://telegra.ph/十一-10-01>
+
