--- a/src_site/n/posts/2019-10-06-十月.markdown
+++ b/src_site/n/posts/2019-10-06-十月.markdown
@@ -53,12 +53,18 @@ Essen是第二次去，三年前在那里丢了行李，恍恍惚惚地在城里
 到了他。然而他第二天要回越南，并没有时间畅聊了。临别他给我推荐了一个新开的呷哺呷
 哺，于是，我今生第一次一个人吃了火锅。
 
+
+:::::{.frow .row-center}
+:::{.col-md-2-3}
 ![一个人吃火锅，最后吃得干干净净，一点儿也没有浪费，挺着肚子回到了酒店，算是对在
 外地完成跑步计划的奖励。肉比柏林的现在的火锅店良心多了，柏林现在已经找不到一家不
 用"合成肉"的火锅店了。](/images/posts/2019-10-06-02.jpg){width=100%}
-
+:::
+:::{.col-md-1-3}
 ![虽然需要点，但是其实也是自助火锅，而且包含饮料，最后又加了一些东西。19€每人，但
 是一个人吃，要加5€的"单身税"。](/images/posts/2019-10-06-03.jpg){width=100%}
+:::
+:::::
 
 在Essen的时候无时不怀念柏林，终于在周五深夜返回到了柏林，再一次感受到了回“家”的感
 觉。 我曾经一度以为，我不会有这样的感觉了，大约是5月从美国回来的时候，感觉柏林已
@@ -100,11 +106,17 @@ ALLES，女朋友在你生活中应该是最重要的，你要找一个女朋友
 跑5km了。给自己订了一个小目标，就是明年可以10km跑进50min，并且明年或者后年，有机
 会试一试马拉松这个中产阶级的广场舞，虽然我只是无产阶级。
 
-![按着既定的计划，每次都能看到一些进步，可能能给郁闷的生活增加一些欣慰吧。](/images/posts/2019-10-06-05.jpg){width=40%}
+:::::{.frow .row-center}
+:::{.col-md-1-2}
+![按着既定的计划，每次都能看到一些进步，可能能给郁闷的生活增加一些欣慰吧。](/images/posts/2019-10-06-05.jpg){width=100%}
+:::
 
+:::{.col-md-1-2}
 ![在C25K最后一周之前，感觉自己精力旺盛，所以又按照网上的种种教程，给自己加了一个
 长距离慢跑，有这么一条刚好10km的笔直的路，也是很有趣。神奇的事情是，跑完竟然没有
-觉得很累，当然，毕竟只是慢跑。](/images/posts/2019-10-06-06.jpg){width=40%}
+觉得很累，当然，毕竟只是慢跑。](/images/posts/2019-10-06-06.jpg){width=100%}
+:::
+:::::
 
 2013年9月13日到的柏林，所以上个月13日的时候应该是整整六年的时候，本来希望能够纪念
 一下的，但是实际上也不知道要纪念什么。而且很多时候，痛苦与快乐也不知道该和谁分享，
